[Bugfree 3894] GVC3220_V20.20.03.03_Schedule: When the contact or group name is too long, add a member interface on the web side, the contact name needs to be omitted
Cause: None
Solution: None
Fixed Version: 20200318
Branch: GVC3220

Reviewed-on: https://192.168.120.246/182739
Tested-by: yplu <yplu@grandstream.cn>

--- a/webgui/gvc3200_new/src/components/ComponentsOfCall/InviteMemberModal/InviteMemberModalStyle.less
+++ b/webgui/gvc3200_new/src/components/ComponentsOfCall/InviteMemberModal/InviteMemberModalStyle.less
@@ -62,6 +62,13 @@
           margin-bottom: 3px;
           margin-right: 5px;
           padding: 2px 5px;
+          max-width: 200px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          padding-right: 15px;
+          position: relative;
+          vertical-align: middle;
           &.acct-0 {
             border: 1px solid #4ed711;
           }
@@ -94,6 +101,8 @@
           cursor: pointer;
           font-weight: bold;
           padding-left: 2px;
+          position: absolute;
+          right: 5px;
           &::before {
             content: "\D7";
             color: #ccc;
@@ -189,5 +198,16 @@
         }
       }
     }
+  }
+}
+
+.group-members-modal {
+  table {
+    table-layout: fixed;
+  }
+  td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
